[package]
name = "geese_pool"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/geese_pool"
readme = "README.md"
description = """
Message-passing system for networking with Geese.
"""

[dependencies]
geese = "0.2.0"
fxhash = "0.2.1"
serde = { version = "1.0.159", optional = true }
takecell = "0.1.1"

[features]
default = [ "serde" ]
serde = [ "dep:serde" ]